startbootstrap-modern-business-gh-pages/css/ncbs-responsive.css
.navbar-header-static-top
{
width:100%;

}


.navbar-header-bg_col
{
background-image: url(../images/bg_img.jpg);
background-repeat: no-repeat;
background-size: cover;

background-color: rgba(102,102,102,0.5);
background-blend-mode: multiply;
	

margin-bottom: 0px;
border-color:transparent;
}
.navbar-header-border-color
{
color: #F4F3E9;
}
.navbar-header-link-color
{
color:#5e5e56;
}
.navbar-header-link-hover-color
{
color:#FFF;
}

.dropdown-box-color 
{
background-color:transparent;
}

.navbar-inverse .navbar-nav>li>a {
color:#FFFFFF;
}
.navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:focus, .navbar-inverse .navbar-nav>.open>a:hover
{
color: #fff;
    background-color:rgba(102,102,102,0.66);;
}
.navbar-inverse .navbar-nav>.open>a:focus, .navbar-inverse .navbar-nav>.open>a:hover
{
color: #FFFFFC;
}


.home-hero-bg
{
background-image:url(../images/bg_img.jpg);
background-repeat: no-repeat;
    background-size: cover;
	background-color: rgba(102,102,102,0.2);
background-blend-mode: multiply;
}
.home-hero-lefttext-container
{
	margin-top: 10px;
    background-color: rgba(102, 102, 102, 0.2);
    font-size: 16px;
    line-height: 19px;
    font-family: roboto;
    color: #f2f2f2;
    padding: 15px;
    border-radius: 0px;
	
}

.home-hero-lefttext-removepadding
{
	padding:0px;
}
.theme-dropdown-icon {
    width:30px;
    padding:8px;
}

.body-scroll-padding
{
	overflow-x: hidden;
	padding: 0px;
}
.navbar-inverse {
border-radius:0px;
   }
   .navbar-inverse .navbar-toggle {
    border-color: #CDCCB9;
}
.panel-background
{
	background-color: transparent;
}
.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
    border-color: #ffffff;
}



.navbar-inverse .navbar-nav .open .dropdown-menu li a:hover{

background-color:#357774;
color:#FFFFFF;
font-weight:300;
}

